<resources>
    <string name="app_name">PlaningApp</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_daily">Daily</string>
    <string name="title_setting">Setting</string>
    <string name="title_monthly">Monthly</string>
    <string name="title_wheel">Wheel</string>
    <string name="title_home">There will be perfect design soon</string>
    <string name="title_activity_daily_acivity">DailyAcivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello</string>
    <string name="lang">Language</string>
    <string name="eng">English</string>
    <string name="not">Notifications</string>
    <string name="auto_del">Dealete succsessed tasks</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
